--- a/assets/css/editar.css
+++ b/assets/css/editar.css
@@ -68,7 +68,7 @@
     border: 1px dashed #ccc;
     border-radius: 5px;
     margin-bottom: 10px;
-    background-color: #f0f0f0;
+    background-color: var(--color-quaternary);
 }
 
 .edit-container-figure {
@@ -91,8 +91,8 @@
 
 .upload-btn {
     width: 25%;
-    padding: 0.125rem 1.6rem;
-    margin-bottom: 1.5rem;
+    padding-top: 0.2rem;
+    padding-bottom: 0.4rem;
     
     color: #FFFFFF;
     font-family: var(--font-primary);
@@ -158,8 +158,7 @@
 
 .edit-container-button {
     width: 15%;
-    padding-top: 0.5rem;
-    padding-bottom: 0.7rem;
+    padding-bottom: 0.35rem;
 
     align-self: flex-end;
     text-align: center;
